# art_cats

./: .gitignore  BAK_edit.py  BAK_edit.withIllustrations.py  OLD_orderForm.py  README.md  art_cats.py  art_cats_pymarc.py  convert.py  edit copy.py  edit.py  excel_to_marc21 copy.py  excel_to_marc21.old.py  excel_to_marc21.py  experimental.py  label_test.py  mypy.ini.OLD  orderForm copy.py  orderForm.py  pyproject.toml  scrap.py  scrap.txt  test_module.py  tmp.csv  tmp.py  todo_list.md
app/: BAK_convert.py  convert.py  convert_pymarc.py  help.html  help.old.html  help_orders.html  order_dropdown_data.py  order_form_notes.txt  test_module.py
dev/: Excel_File_Example_20181008.ALMA_API.xlsx  convert.py  dev.py  scrap.py
input_files/: AuctionCats.20250814.data.csv  AuctionCats.20250814.v5.debug.csv  AuctionCats.2025noDates.xlsx  AuctionCats.2025sep.updated.csv  OLD_test_cat.csv  art_cat_test.csv  order_sample.csv  pynsent_ZW240307.csv  strachan_testData.csv  test_28col.xlsx  test_29col.xlsx  test_cat.csv  test_cat_new.csv  test_cat_new.new.csv
marc21_files/: AuctionCatalogues.sothebysParkeBernet.paul.mrc  AuctionCatalogues.sothebysParkeBernet.paul.mrk  AuctionCats.20250814.corrected.paul.mrc  AuctionCats.20250814.corrected.paul.mrk  AuctionCats.20250814.corrected.pypaul.mrc  AuctionCats.20250814.corrected.pypaul.mrk  AuctionCats.20250814.paul.mrc  AuctionCats.20250814.paul.mrk  AuctionCats.jeremyWarrenDonation.paul.mrc  AuctionCats.jeremyWarrenDonation.paul.mrk  ChineseArtCatalogues.3examples.updated.paul.mrc  ChineseArtCatalogues.3examples.updated.paul.mrk  (+6 more)
(+114 files in other folders)
