[project]
name = "art-cats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
