[project]
name = "art-cats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "openpyxl>=3.1.5",
    "pymarc>=5.3.1",
    "pyside6>=6.9.2",
    "pytest>=8.4.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
