[project]
name = "art-cats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "openpyxl>=3.1.5",
    "pymarc>=5.3.1",
    "pyside6>=6.9.2",
    "pytest>=8.4.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

[project.entry-points."console_scripts"]
# Format: <name-for-command> = "<package>.<module>:<function>"
# This allows the cmds: uv run artcats & uv run order
# artcats = "art_cats.art:main"
# command to update the system when you change an entry point:
# uv pip install -e .
cat = "art_cats.art:main"
cattab = "art_cats.art_withTable:main"
order = "art_cats.order:main"
uni = "art_cats.universal:main"
strachan = "art_cats.strachan:main"
update = "art_cats.tmp_update:main"
